Refactor dungeon manager